<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/game_firstFragment_ImageButton_onlineGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/game_firstFragment_text_onlineGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/game_firstFragment_text_onlineGame" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/game_firstFragment_ImageButton_standAlone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/game_firstFragment_text_standAlone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/game_firstFragment_text_standAlone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/game_firstFragment_ImageButton_smallGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/game_firstFragment_text_smallGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/game_firstFragment_text_smallGame" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/game_firstFragment_ImageButton_indieGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/game_firstFragment_text_indieGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/game_firstFragment_text_indieGame" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/game_firstFragment_ImageButton_latest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/game_firstFragment_text_latest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/game_firstFragment_text_latest" />
        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>